--- a/src/app/ticket-list/components/ticket-list/ticket-list.component.css
+++ b/src/app/ticket-list/components/ticket-list/ticket-list.component.css
@@ -3,12 +3,26 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .ticket-list__table {
-    width:100%;
+  width: 100%;
 }
 
 .ticket-list td {
   width: 200px;
+}
+.ticket-list tr {
+  cursor: pointer;
+}
+
+.ticket-list__form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr ;
+  width: calc(100% - 70px);
+  padding: 20px;
+  
+
 }
